# spineps

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  MIGRATION.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: linter.yml  python-publish.yml  tests.yml
docs/: getting-started.md  index.md
docs/api/: architectures.md  enums.md  models.md  phases.md  pipeline.md  utils.md
docs/modules/: models.md  phases.md  pipeline.md
spineps/: __init__.py  api.py  auto_download.py  config.py  entrypoint.py  get_models.py  lab_model.py  models.py  phase_instance.py  phase_labeling.py  phase_post.py  phase_pre.py  phase_semantic.py  seg_enums.py  seg_model.py  seg_modelconfig.py  seg_pipeline.py  seg_run.py  seg_utils.py
spineps/Unet3D/: pl_unet.py  unet3D.py
spineps/architectures/: __init__.py  pl_densenet.py  pl_unet.py  read_labels.py  unet3D.py
spineps/architectures_new/: __init__.py  dice.py  pl_unet.py  unet2D.py  unet3D.py
spineps/example/: get_gpu.py  helper_parallel.py  template_roll_out.py
spineps/utils/: __init__.py  auto_download.py  citation_reminder.py  compat.py  data_iterators.py  default_preprocessor.py  export_prediction.py  fastProcessor.py  filepaths.py  find_min_cost_path.py  generate_disc_labels.py  get_network_from_plans.py  image.py  inference_api.py  mincutmaxflow.py  plans_handler.py  predictor.py  proc_functions.py  resolution.py  seg_modelconfig.py  sliding_window_prediction.py  train_start.py
unit_tests/: test_api.py  test_architectures.py  test_compat.py  test_disc_labels.py  test_entrypoint.py  test_enums.py  test_filepaths.py  test_find_min_cost_path.py  test_generate_disc_labels_extra.py  test_inference_mocked.py  test_labeling.py  test_modelconfig.py  test_models.py  test_path.py  test_phase_labeling.py  test_postproc.py  test_proc_functions.py  test_pure_helpers.py  test_resolution.py  test_semantic.py
