[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "SPINEPS"
version = "1.0.0"
description = "Framework for out-of-the box whole spine MRI segmentation."
authors = ["Hendrik Möller <hendrik.moeller@tum.de>"]
repository = "https://github.com/Hendrik-code/spineps"
homepage = "https://github.com/Hendrik-code/spineps"
documentation = "https://spineps.readthedocs.io"
license = "Apache License Version 2.0, January 2004"
readme = "README.md"
exclude = ["models", "examples"]

[tool.poetry.scripts]
spineps = 'spineps.entrypoint:entry_point'

spineps_ = 'spineps.entrypoint:entrypoint_no_checks'

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11 || ^3.12 || ^3.13 || ^3.14"
pytorch-lightning = "^2.0.8"
torchmetrics = "^1.1.2"
tqdm = "^4.66.1"
einops= "^0.6.1"
nnunetv2 = "^2.4.2"
TPTBox = "*"
antspyx = "0.4.2"
rich = "^13.6.0"
monai="^1.3.0"
acvl-utils = "0.2"
TypeSaveArgParse="^1.0.1"
python-gdcm = [
  { version = "==3.0.25", python = ">=3.9,<3.10" },
]


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "*"
coverage = ">=7.0.1"
pytest-mock = "^3.6.0"
pandas = "^2.1.0"
joblib = "^1.3.2"
future = "^0.18.3"
flake8 = ">=4.0.1"
#auxiliary = ">=0.1.0"
tqdm = ">=4.62.3"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
mkdocstrings = { extras = ["python"], version = ">=0.25" }


[tool.poetry-dynamic-versioning]
enable = true


[tool.ruff]
namespace-packages = ["datagen"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "spineps/Unet3D",
    "spineps/utils/data_iterators.py",
    "spineps/utils/default_preprocessor.py",
    "spineps/utils/export_prediction.py",
    "spineps/utils/get_network_from_plans.py",
    "spineps/utils/plans_handler.py",
    "spineps/utils/predictor.py",
    "spineps/utils/sliding_window_prediction.py",
    "spineps/utils/image.py",  # vendored from spinalcordtoolbox
    ".toml",
]
line-length = 140
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
## Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
## Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
## McCabe complexity (`C901`) by default.
#
select = [
    "E",
    "F",
    "W",
    "C901",
    "I",
    "N",
    "UP",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "C4",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    #"RET",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "TD005",
    "FIX003",
    "FIX004",
    #"ERA", For clean up
    #"D", Dockstring For clean up
    #"ANN", Annoation For clean up
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "RUF",
    "RUF059",  # preview rule: unused unpacked variable (enabled via explicit-preview-rules below)
]


ignore = [
    "F401",
    "BLE001",
    "E501",
    "N801",
    "PD002",
    "PERF203",
    "PTH123",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "SIM105",
    "TRY003",
    "UP038",
    "N999","E741",
    "SIM118", # dictionay keys
    "N802", # function name lowercase
    "PLR2044", # empty comment symbol
    "B905", # strict= in zip()
    "UP007", # Union instead of | in python 3.9
    "PLC0415",
    "UP045",
    "N803",
    "N806",
    "N812",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
ignore-init-module-imports = true
extend-safe-fixes = ["RUF015", "C419", "C408", "B006"]
#unnecessary-iterable-allocation-for-first-element = true


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable preview mode for the linter, but only enforce preview rules that are selected by their
# explicit code (e.g. RUF059 above) instead of pulling in the entire preview rule set.
preview = true
explicit-preview-rules = true

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 20


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true



# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Add this to your setting.json (user)
# Ctrl+shift+P settings json
#"[python]": {
#        "editor.formatOnSave": true,
#        "editor.defaultFormatter": "charliermarsh.ruff",
#        "editor.codeActionsOnSave": {
#            "source.fixAll": "explicit",
#            "source.organizeImports": "never"
#        }
#      },
#    "notebook.formatOnSave.enabled": true,
#    "notebook.codeActionsOnSave": {
#        "source.fixAll": false,
#        "source.organizeImports": false
#    },
